<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
    tools:context="com.example.connect3.MainActivity">

    <LinearLayout
        android:id="@+id/linearScoreLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/player" />

        <TextView
            android:id="@+id/playerScore"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:padding="16dp"
            android:text="0"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/system" />

        <TextView
            android:id="@+id/systemScore"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:padding="16dp"
            android:text="0"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/board"
        android:columnCount="3"
        android:foregroundGravity="center"
        android:rowCount="3"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearScoreLayout">

        <ImageView
            android:id="@+id/imageView0"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="dropIn"
            android:tag="0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="dropIn"
            android:tag="1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="dropIn"
            android:tag="2"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="dropIn"
            android:tag="3"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="dropIn"
            android:tag="4"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="dropIn"
            android:tag="5"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="dropIn"
            android:tag="6"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="dropIn"
            android:tag="7"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription=""
            android:onClick="dropIn"
            android:tag="8"
            tools:ignore="ContentDescription" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/buttonsCarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39">

        <Button
            android:id="@+id/easyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/holo_green_dark"
            android:onClick="playAgain"
            android:tag="1"
            android:padding="8dp"
            android:text="@string/easy"
            android:visibility="visible"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="216dp" />

        <Button
            android:id="@+id/mediumButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/holo_blue_dark"
            android:onClick="playAgain"
            android:tag="2"
            android:padding="8dp"
            android:text="@string/medium"
            android:visibility="visible"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="256dp" />

        <Button
            android:id="@+id/proButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/holo_purple"
            android:onClick="playAgain"
            android:tag="3"
            android:padding="8dp"
            android:text="@string/pro"
            android:visibility="visible"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="96dp" />

        <Button
            android:id="@+id/unbeatableButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="@android:color/holo_red_dark"
            android:onClick="playAgain"
            android:tag="4"
            android:text="@string/unbeatable"
            android:visibility="visible"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="144dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
